--- a/public/md/chatbox/1.21-1.21.1_NeoForge_1.0.6_zh_cn.md
+++ b/public/md/chatbox/1.21-1.21.1_NeoForge_1.0.6_zh_cn.md
@@ -23,7 +23,7 @@ ChatBox添加自定义的指令，允许开发者使用指令来与mod交互。
 
 /chatbox open  打开最近一次对话
 
-/chatbox maxTriggerCount <数据包路径: ResourceLocation> <最大访问次数:int>
+/chatbox maxTriggerCount <数据包路径: ResourceLocation> <最大访问次数:int> 设置一段对话的最大访问次数
 
 * 数据包路径：对话框主题的位置
 
