--- a/public/md/chatbox/1.21-1.21.1_NeoForge_1.0.8_zh_cn.md
+++ b/public/md/chatbox/1.21-1.21.1_NeoForge_1.0.8_zh_cn.md
@@ -790,7 +790,7 @@ ItemEvents.entityInteracted(event => {
 这样就成功的将泰拉生物NPC的对话框换成本模组的，那么这时候又有人要问了：那我还如何打开这个NPC的商店呢？
 你可以在对话文件中给选项的点击事件类型选择为`TERRA_ENTITY_SHOP`，这样玩家点击该选项的时候就可以打开当前交互的NPC对应的商店
 
-# TextAnimator
+## TextAnimator
 
 你可以用这个模组来给自己的对话文本提供更好看的动画，使用可以直接参考该模组Github的readme文档：[TextAnimator](https://github.com/Snownee/TextAnimator/tree/1.20-fabric)
 
