--- a/src/languages/messages/idMap.json
+++ b/src/languages/messages/idMap.json
@@ -1,1 +1,356 @@
-{}
+{
+    "确定": 95,
+    "取消": 96,
+    "加载失败": 97,
+    "确认": 98,
+    "按下 {} + k 以搜索": 99,
+    "首页": 100,
+    "关于我们": 101,
+    "编辑": 102,
+    "模组": 103,
+    "更多": 104,
+    "找不到您的语言？": 105,
+    "点击这里协助翻译": 106,
+    "输入内容以自动搜索": 107,
+    "JSON生成器": 283,
+    "打造沉浸式RPG/GAL剧情体验": 284,
+    "更加现代化的商店系统": 285,
+    "数据结构错误: 预期 Object，实际{}": 611,
+    "暂不支持编辑类型: {}": 612,
+    "请输入或选择": 613,
+    "无匹配预设": 614,
+    "使用: {}": 615,
+    "无配置项": 616,
+    "编辑对象": 108,
+    "保存修改": 109,
+    "暂无数据": 617,
+    "视频链接URL": 110,
+    "链接的URL不能为空": 111,
+    "{}级标题": 112,
+    "信息提示": 260,
+    "警告提示": 261,
+    "重要提示": 262,
+    "步骤": 113,
+    "无序列表": 114,
+    "有序列表": 115,
+    "引用块": 116,
+    "水平线": 117,
+    "插入超链接": 118,
+    "代码块": 119,
+    "行内代码": 120,
+    "任务列表": 121,
+    "在线链接图片": 122,
+    "表格": 123,
+    "在线视频": 124,
+    "图表": 125,
+    "graph TD\\n  A[开始] --> B{判断}\\n  B -- 是 --> C[执行]\\n  B -- 否 --> D[结束]": 276,
+    "退出全屏": 281,
+    "全屏模式": 282,
+    "插入": 127,
+    "链接URL": 128,
+    "链接文字（可选）": 129,
+    "插入外部链接图片": 130,
+    "外部图片链接": 131,
+    "插入表格": 132,
+    "请输入行": 133,
+    "行": 134,
+    "请输入列": 135,
+    "列": 136,
+    "插入外部链接视频": 137,
+    "视频宽(像素)：": 138,
+    "视频高(像素):": 139,
+    "预览": 140,
+    "代码": 141,
+    "1.21.1 NeoForge 开发者": 295,
+    "写模组是工作，写Web才是生活": 296,
+    "主程序大人": 297,
+    "此人很高冷，没有任何留言": 298,
+    "生成Markdown文件": 142,
+    "请确定是否要生成Markdown文件": 143,
+    "生成文件需要的信息缺失，请检查你的文件名是否提供": 144,
+    "已成功生成文件": 145,
+    "目录": 146,
+    "请输入文件名": 275,
+    "功能展示": 147,
+    "小笨蛋，页面跑偏啦～": 148,
+    "您可以选择返回主页": 149,
+    "返回主页": 150,
+    "我们的 Minecraft 模组": 151,
+    "了解更多": 152,
+    "名称": 618,
+    "对话内容": 619,
+    "渲染事件": 620,
+    "本编辑器无法测试，请配置好到游戏内测试（你也不可能指望我这个编辑器给你执行mc指令吧）": 621,
+    "未选择时机": 622,
+    "未选择类型": 623,
+    "点击事件类型": 624,
+    "事件参数": 625,
+    "选项内容": 626,
+    "是否锁定": 627,
+    "解锁指令": 628,
+    "例如: execute if score @s ...": 629,
+    "跳转对话": 630,
+    "填数字为当前分组对应序号的对话，字符串是跳转到对应的分组，不填默认下一句话，this留在当前对话": 631,
+    "悬浮提示": 632,
+    "点击事件": 633,
+    "选项配置": 634,
+    "选项": 635,
+    "视频路径": 636,
+    "相对于 .minecraft 文件夹或绝对路径": 637,
+    "允许控制": 638,
+    "允许跳过": 639,
+    "循环播放": 640,
+    "立绘 ID": 641,
+    "覆盖模式": 642,
+    "开启后，将替换掉场上同 ID 的旧立绘，而不是添加新立绘": 643,
+    "立绘列表": 644,
+    "播放音效": 645,
+    "执行指令": 646,
+    "背景图片": 647,
+    "清除旧立绘": 648,
+    "移除指定立绘": 649,
+    "输入要移除的立绘 ID": 650,
+    "标识": 651,
+    "纯装饰作用，仅提供建议填写": 652,
+    "允许 ESC 跳过": 653,
+    "对话时暂停游戏": 654,
+    "允许历史回溯": 655,
+    "是否为屏幕主题": 656,
+    "绑定的主题文件": 657,
+    "进入对话时会自动设置为这个主题": 658,
+    "动画 FPS": 659,
+    "自动播放间隔 (Tick)": 660,
+    "最大触发次数": 661,
+    "-1 为无限": 662,
+    "进度触发条件": 663,
+    "JSON 格式的进度触发器": 664,
+    "游戏内生效，本编辑器无效": 665,
+    "触发时机": 666,
+    "事件类型": 667,
+    "附件类型": 668,
+    "图片路径": 669,
+    "文本内容": 670,
+    "X 坐标 (%)": 671,
+    "Y 坐标 (%)": 672,
+    "高度": 673,
+    "宽度": 674,
+    "行宽": 675,
+    "文本对齐": 676,
+    "自动换行": 677,
+    "文本颜色": 678,
+    "持续时间 (帧)": 679,
+    "动画持续的帧数 (默认60帧=1秒)": 680,
+    "缓动函数": 681,
+    "绝对定位：直接移动到屏幕宽度的百分比位置": 682,
+    "绝对定位：直接移动到屏幕高度的百分比位置": 683,
+    "X 偏移 (%)": 684,
+    "相对偏移：基于当前位置，再叠加屏幕宽度的百分比位移": 685,
+    "Y 偏移 (%)": 686,
+    "相对偏移：基于当前位置，再叠加屏幕高度的百分比位移": 687,
+    "缩放": 688,
+    "旋转": 689,
+    "透明度": 690,
+    "亮度": 691,
+    "切换材质": 692,
+    "默认隐藏": 693,
+    "X坐标 (%)": 694,
+    "Y坐标 (%)": 695,
+    "层级 (Z)": 696,
+    "宽度 (%)": 697,
+    "高度 (%)": 698,
+    "水平对齐": 699,
+    "垂直对齐": 700,
+    "启用提示": 701,
+    "鼠标图标宽 (px)": 702,
+    "鼠标图标高 (px)": 703,
+    "右键图标": 704,
+    "滚轮图标": 705,
+    "类型": 706,
+    "鼠标悬浮时图片": 707,
+    "物品 ID": 708,
+    "鼠标悬浮时物品": 709,
+    "数量": 710,
+    "自定义物品模型数据": 711,
+    "玩家 ID": 712,
+    "鼠标悬浮时玩家ID": 713,
+    "预设动画": 714,
+    "只能获取当前主题文件的预设动画补全，但是你可以使用其它主题文件的预设动画": 715,
+    "自定义动画": 716,
+    "{time}帧": 717,
+    "渲染附件": 718,
+    "功能类型": 719,
+    "贴图": 720,
+    "鼠标悬浮时或功能激活时的贴图": 721,
+    "预览内容": 722,
+    "仅用于预览内容，不保存": 723,
+    "选项贴图": 724,
+    "文字对齐": 725,
+    "锁定图标": 726,
+    "文字 X 偏移": 727,
+    "文字 Y 偏移": 728,
+    "预览名字": 729,
+    "仅用于预览名字位置，不保存": 730,
+    "仅用于预览内容位置和换行，不保存": 731,
+    "对话框贴图": 732,
+    "换行宽度": 733,
+    "名字 X偏移": 734,
+    "名字 Y偏移": 735,
+    "内容 X偏移": 736,
+    "内容 Y偏移": 737,
+    "关键帧列表": 738,
+    "背景颜色": 739,
+    "全局动画库": 740,
+    "左对齐": 741,
+    "居中": 742,
+    "右对齐": 743,
+    "上对齐": 744,
+    "下对齐": 745,
+    "图片": 746,
+    "玩家头像": 747,
+    "物品": 748,
+    "文本": 749,
+    "历史记录": 750,
+    "快进": 751,
+    "自动播放": 752,
+    "组件渲染开始时": 753,
+    "组件渲染结束时": 754,
+    "立绘被点击时": 755,
+    "鼠标悬停在立绘上时": 756,
+    "鼠标离开立绘时": 757,
+    "强制跳转对话": 758,
+    "到下一句对话": 759,
+    "播放语音": 760,
+    "停止特定音效": 761,
+    "隐藏特定组件": 762,
+    "显示特定组件": 763,
+    "替换自身为特定组件": 764,
+    "设置是否自动播放": 765,
+    "缩放立绘": 766,
+    "播放一个动画": 767,
+    "重新播放该立绘拥有的动画": 768,
+    "打开泰拉生物NPC商店": 769,
+    "FADE_IN (淡入)": 770,
+    "SLIDE_IN_FROM_BOTTOM (底部滑入)": 771,
+    "BOUNCE (弹跳)": 772,
+    "当前语言没有文档哦，请使用其它语言": 153,
+    "获取途径": 154,
+    "文档": 155,
+    "不支持的组件类型": 773,
+    "编辑对象 #{}": 774,
+    "component.delete": 156,
+    "空": 157,
+    "编辑 {}": 775,
+    "请输入文本...": 776,
+    "新建项": 158,
+    "请输入唯一的标识符 (ID)": 159,
+    "该 ID 已存在，请使用其他 ID": 160,
+    "删除": 161,
+    "确定要删除 {} 吗？": 777,
+    "重命名 ID": 162,
+    "ID 已存在": 163,
+    "重命名 Key": 164,
+    "暂无键值对": 165,
+    "已复制": 255,
+    "复制代码": 256,
+    "警告": 269,
+    "永久关闭后，该图表的源码编辑区将不再显示，确定吗？": 270,
+    "Mermaid 源码": 271,
+    "永久关闭": 166,
+    "第{}步": 263,
+    "第一步": 264,
+    "在这里输入内容": 265,
+    "第二步": 266,
+    "数据包(DATA)": 778,
+    "请点击右上角": 779,
+    "打开本地": 780,
+    "文件夹": 781,
+    "(支持 Ctrl+S 直接保存)": 782,
+    "新建立绘": 783,
+    "请输入新立绘的 ID (Key):": 784,
+    "该 ID 已存在！": 785,
+    "删除立绘": 786,
+    "确定要删除立绘 \"{}\" 吗？": 787,
+    "删除按钮": 788,
+    "确定删除该按钮吗？": 789,
+    "删除渲染附件": 790,
+    "确定要删除该附件吗？": 791,
+    "新建剧情片段": 792,
+    "请输入唯一的组 ID (例如: chapter_1):": 793,
+    "该组名已存在": 794,
+    "删除剧情片段": 795,
+    "确定要删除组 \"{}\" 及其所有内容吗？": 796,
+    "核心组件": 797,
+    "对话框": 798,
+    "选项样式": 799,
+    "按键提示": 800,
+    "立绘组": 801,
+    "功能按钮": 802,
+    "当前选中: 对话帧": 803,
+    "基础配置": 804,
+    "选项分支": 805,
+    "立绘配置": 806,
+    "视频配置": 807,
+    "返回全局配置": 808,
+    "当前选中: 全局配置": 809,
+    "全局参数": 810,
+    "剧情分组": 811,
+    "暂无分组": 812,
+    "请打开文件": 813,
+    "数据加载中...": 814,
+    "请先打开一个主题/对话文件": 815,
+    "添加语言列": 816,
+    "请输入语言代码 (如 ja_jp)": 817,
+    "读取文件 {} 失败": 818,
+    "导入成功": 819,
+    "成功导入 {} 个语言文件": 820,
+    "文件": 821,
+    "查看JSON": 822,
+    "保存": 823,
+    "管理翻译键...": 824,
+    "帮助": 825,
+    "关于 ChatBox Editor": 826,
+    "这是一个用于 Minecraft ChatBox Mod 的可视化配置编辑器。": 827,
+    "编辑器对应模组版本v1.1": 828,
+    "正在编辑:": 829,
+    "翻译键": 830,
+    "搜索 Key...": 831,
+    "添加 Key": 832,
+    "添加语言": 833,
+    "选择语言导出": 834,
+    "导入": 835,
+    "输入翻译键名 (例如: item.sword.name)": 836,
+    "输入 {} 对应的内容": 837,
+    "暂无翻译数据，请添加 Key 或导入文件": 838,
+    "JSON预览": 839,
+    "资源包(ASSETS)": 840,
+    "搜索贴图...": 841,
+    "正在扫描资源...": 842,
+    "点击右上角导入": 843,
+    "生成JSON": 844,
+    "16:9 (标准)": 845,
+    "16:10 (宽屏)": 846,
+    "4:3 (旧式)": 847,
+    "21:9 (超宽)": 848,
+    "请在左侧选择一个文件开始编辑": 849,
+    "比例": 850,
+    "新建剧情片段 (组)": 851,
+    "请输入唯一的组 ID (例如: chapter_1_start)": 852,
+    "确定要删除剧情片段 \"{}\" 吗？此操作无法撤销。": 853,
+    "已复制对话": 854,
+    "剧情片段(组)": 855,
+    "暂无剧情片段": 856,
+    "点击右上角 + 添加": 857,
+    "未选择组": 858,
+    "添加对话": 859,
+    "未知角色": 860,
+    "( 空对话内容 )": 861,
+    "此片段暂无对话": 862,
+    "立即添加": 863,
+    "请先在左侧选择或新建一个剧情片段": 864,
+    "图片附件": 865,
+    "未知类型": 866,
+    "请在右侧设置贴图": 867,
+    "切换选项": 868,
+    "关闭对话框": 869,
+    "快进对话": 870
+}
