--- a/public/md/viscriptshop/zh-CN/00-介绍.md
+++ b/public/md/viscriptshop/zh-CN/00-介绍.md
@@ -101,14 +101,6 @@ ViScriptShopEvents.buySuccess(event=&gt;{})&nbsp; </code></pre>
 <h2 id="lightmanscurrency" data-toc-id="lightmanscurrency">
   <strong>LightmansCurrency</strong></h2>
 <p>可以读取到玩家装备的钱袋里的物品</p>
-<h1 id="更新日志" data-toc-id="更新日志"><strong>更新日志</strong></h1>
-<h2 id="102" data-toc-id="102"><strong>1.0.2</strong></h2>
-<ul>
-  <li>
-    <p>添加FTB Library联动</p>
-  </li>
-  <li>
-    <p>兼容最新版Ldlib2</p>
-  </li>
-</ul>
+<h2 id="汇流来世" data-toc-id="汇流来世">汇流来世</h2>
+<p>支持读取玩家额外槽（钱币槽和弹药槽）和小猪储钱罐里的物品</p>
 <p></p>
