--- a/public/md/chatbox/zh-CN/00-模组介绍.md
+++ b/public/md/chatbox/zh-CN/00-模组介绍.md
@@ -154,7 +154,7 @@
   </li>
 </ul>
 <h3 id="立绘" data-toc-id="立绘">立绘</h3>
-<p>这里的立绘是预设的状态，将在写对话文本的时候调用立绘的标识符来使用。立绘有3种类型，不同类型的立绘参数作用略有不同。话不多说，上案例：</p><pre language="json" isclosed="false"><code class="language-json">{
+<p>这里的立绘是预设的状态，将在写对话文本的时候调用立绘的标识符来使用。立绘有4种类型，不同类型的立绘参数作用略有不同。话不多说，上案例：</p><pre language="json" isclosed="false"><code class="language-json">{
   "portrait": {
     "pic": {
       "type": "texture",
@@ -174,7 +174,7 @@
         }
       ]
     },
-    "player": {
+    "head": {
       "type": "player_head",
       "texture": "@s",
       "x": 0, "y": 0, "width": 10, "height": 10, "alignX": "left", "alignY": "bottom",
@@ -202,17 +202,24 @@
         {"time": 50},
         {"time": 50, "angle": 360}
       ]
+    },
+    "player": {
+      "type": "entity", "texture": "@s",
+      "alignX": "center", "alignY": "center",
+      "x": -30, "y": -4, "width": 80, "height": 120,
+      "yOffset": 0,
+      "stareAt": "point", "stareAtX": 50, "stareAtY": 50
     }
   }
 }</code></pre>
 <p>在上面的案例中包含了3种立绘里包含的所有的参数，接下来我们来一一介绍一下这些参数：</p>
 <p>
-  首先<code>pic player item</code>都是唯一的标识符，你也可以理解成是这个立绘的名称，这些标识符只能出现一次，但是取名可以随便取，用于在对话框文本中调用。
+  首先<code>pic head item player</code>都是唯一的标识符，你也可以理解成是这个立绘的名称，这些标识符只能出现一次，但是取名可以随便取，用于在对话框文本中调用。
 </p>
 <ul>
   <li>
     <p>
-      <code>type</code>（可选，默认值为<code>texture</code>）：立绘的类型，可选值有<code>texture, player_head, item</code>。<code>texture</code>表示使用资源包的图片，<code>player_head</code>表示使用玩家皮肤的头像，<code>item</code>表示使用物品纹理。
+      <code>type</code>（可选，默认值为<code>texture</code>）：立绘的类型，可选值有<code>texture, player_head, item, entity</code>。<code>texture</code>表示使用资源包的图片，<code>player_head</code>表示使用玩家皮肤的头像，<code>item</code>表示使用物品纹理，<code>entity</code>表示生物实体渲染，比较特殊，见额外的介绍。
     </p>
   </li>
 </ul>
@@ -270,6 +277,39 @@
       字段，那么只有<code>customAnimation</code> 会生效。</p>
   </div>
 </div>
+<h4 id="实体渲染" data-toc-id="实体渲染">生物实体渲染</h4>
+<p>虽然实体渲染是立绘的类型之一，但它的很多参数与立绘效果都不同，因此在此另作介绍。设计成立绘的子类型是为了便于在json文件中编写。</p>
+<ul>
+  <li>
+    <p>
+      <code>texture</code>（必填）：要渲染的生物，<strong>必须是生物</strong>，末影水晶、射出的箭等非生物实体无法渲染。目前支持填<code>@s</code>表示玩家自己；若打开的对话指定了足够数量的对话目标，则可以填<code>target1</code>表示第一个目标实体（1可省略），填<code>target2</code>表示第二个目标实体，以此类推。
+    </p>
+  </li>
+  <li>
+    <p><code>alignX, alignY, x, y, scale</code>：效果与其他组件的相同。</p>
+  </li>
+  <li>
+    <p>
+      <code>width, height</code>（建议填）：实体渲染的区域，单位为像素。类似于物品的渲染，宽和高本来是无效的，只是这里恰好可以用来限制渲染区域大小。
+    </p>
+  </li>
+  <li>
+    <p><code>yOffset</code>（可选）：垂直偏移量。比如你只想渲染玩家的上半身，可以把这个值设置成合适的正数（向下移）。</p>
+  </li>
+  <li>
+    <p>
+      <code>stareAt</code>（可选）：实体看向窗口的位置选项。填<code>mouse</code>为看向鼠标（仅screen模式可用）；填<code>point</code>为看向固定位置；否则默认看向正前方。
+    </p>
+  </li>
+  <li>
+    <p>
+      <code>stareAtX, stareAtY</code>（可选）：<code>stareAt</code>为<code>point</code>时有效，单位为百分比。
+    </p>
+  </li>
+  <li>
+    <p><strong>其他参数统统无效！</strong></p>
+  </li>
+</ul>
 <h3 id="选项" data-toc-id="选项">选项</h3><pre language="json" isclosed="false"><code class="language-json">{
   "option":{
     "texture": "chatbox:textures/options/default_no_checked_option.png",
