--- a/public/md/chatbox/zh-CN/99-更新日志.md
+++ b/public/md/chatbox/zh-CN/99-更新日志.md
@@ -1,5 +1,14 @@
 <h1 id="更新日志" data-toc-id="更新日志">更新日志</h1>
-<h2 id="1" data-toc-id="1">1.1</h2>
+<h2 id="1" data-toc-id="1">1.1.1</h2>
+<ul>
+  <li>
+    <p>新增配置项：图片立绘宽度缩放比例</p>
+  </li>
+  <li>
+    <p>新增生物实体渲染类型的立绘</p>
+  </li>
+</ul>
+<h2 id="11" data-toc-id="11">1.1</h2>
 <ul>
   <li>
     <p>更新内置的示例对话数据包</p>
